objects/JBCXM__Log__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__ExceptionDescription__c</fullName>
        <description>This will system exception and business exception code like &quot;DML Exception &quot;
,&quot;Account Not Found&quot; with detail messages</description>
        <inlineHelpText>Enter system exception and business exception code like &quot;DML Exception &quot;
,&quot;Account Not Found&quot; with detail messages</inlineHelpText>
        <label>Exception Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__LogDateTime__c</fullName>
        <description>This will store date time when log is created</description>
        <inlineHelpText>The date time when the log is created</inlineHelpText>
        <label>Log Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__SourceData__c</fullName>
        <description>This will store the source data on which log is created</description>
        <inlineHelpText>Source data on which log is created</inlineHelpText>
        <label>Source Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SourceObject__c</fullName>
        <description>This will store Source Object  like &quot;Alert&quot;,&quot;SurveyResponses&quot;  and &quot;Transactions&quot; etc</description>
        <inlineHelpText>Source Object  like &quot;Alert&quot;,&quot;SurveyResponses&quot;  and &quot;Transactions&quot; etc</inlineHelpText>
        <label>Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <description>This stores types like &quot;API&quot;,&quot;Application&quot;  and &quot;Other&quot; etc</description>
        <inlineHelpText>Types like &quot;API&quot;,&quot;Application&quot;  and &quot;Other&quot; etc</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>